--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.741.0",
+    "@aws-sdk/client-s3": "^3.741.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.3",
     "next": "15.1.6",
