--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@aws-sdk/client-s3": "^3.741.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.3",
+    "jszip": "^3.10.1",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.0.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
