--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.741.0",
     "@aws-sdk/client-s3": "^3.741.0",
+    "@next/third-parties": "^15.1.7",
     "@tailwindcss/postcss": "^4.0.3",
     "jszip": "^3.10.1",
     "next": "15.1.6",
